--- a/ДЗ/index.html
+++ b/ДЗ/index.html
@@ -5,25 +5,23 @@
     <title>Интернет-магазин</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-</head>
+</head> 
 <body>
     <header>
         <div class="logo">E-shop</div>
         <button class="btn-cart" type="button">Корзина</button>
     </header>
     <main>
-        <div class="products">
-            
-        </div>
+        <div class="products"></div>
     </main>
-		<!--beforestart-->
-		<p>
-		<!--afterstart-->
-			<span></span>
-			<!--beforeend-->
-		</p>
-		<!--afterend-->
-   
+
+    <!--beforestart-->
+    <!--<p>-->
+        <!--afterstart-->
+        <!--<span></span>-->
+        <!--beforeend-->
+    <!--</p> -->
+    <!--afterend-->
     <script src="js/main.js"></script>
 </body>
 </html>
