--- a/ДЗ/index.html
+++ b/ДЗ/index.html
@@ -9,19 +9,15 @@
 <body>
     <header>
         <div class="logo">E-shop</div>
-        <button class="btn-cart" type="button">Корзина</button>
+        <div class="cart">
+            <button class="btn-cart" type="button">Корзина</button>
+            <div class="cart-block invisible"></div>
+        </div>
     </header>
     <main>
         <div class="products"></div>
     </main>
-
-    <!--beforestart-->
-    <!--<p>-->
-        <!--afterstart-->
-        <!--<span></span>-->
-        <!--beforeend-->
-    <!--</p> -->
-    <!--afterend-->
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
